# cockpit-tools-fuck

./: .gitignore  CONTRIBUTING.md  LICENSE  PRODUCT.md  SECURITY.md  announcements.json
.boss/codex-lite/: architecture.md  design-brief.md  prd.md  qa-report.md  tasks.md  tech-review.md  ui-design.json  ui-spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Casks/: cockpit-tools.rb
codex-lite/: PRODUCT.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  会话恢复.md  账号切换.md
codex-lite/docs/: migration-and-recovery.md  real-account-smoke.md  security.md  troubleshooting.md
codex-lite/src-tauri/: Cargo.toml  tauri.conf.json
codex-lite/src-tauri/capabilities/: default.json
codex-lite/src-tauri/icons/: icon.icns
codex-lite/src-tauri/src/: lib.rs  main.rs  test_support.rs
codex-lite/src-tauri/src/commands/: account.rs  import.rs  mod.rs  oauth.rs  quota.rs  session.rs  settings.rs  system.rs  window.rs
codex-lite/src-tauri/src/infra/: atomic_write.rs  codex_keychain.rs  logger.rs  mod.rs  paths.rs  redaction.rs  storage.rs
codex-lite/src-tauri/src/models/: account.rs  auth.rs  error.rs  import.rs  mod.rs  session.rs  settings.rs
codex-lite/src-tauri/src/services/: account_service.rs  auth_file_service.rs  codex_app_service.rs  codex_config_service.rs  codex_local_access_gateway.rs  codex_official_app_server_service.rs  codex_session_visibility_service.rs  import_service.rs  mod.rs  oauth_service.rs  quota_service.rs  settings_service.rs  switch_service.rs
(+72 files in other folders)
